remove privacy policy from footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,6 +19,6 @@ import logo from '~/assets/images/bhojanam-logo-bg.png';
 				))
 			}
 		</nav>
-		<p class="mt-10 text-center text-sm">&copy; {currentYear} {siteName}. All rights reserved. <a class="underline" href="/privacy-policy">Privacy policy</a></p>
+		<p class="mt-10 text-center text-sm">&copy; {currentYear} {siteName}. All rights reserved.</p>
 	</div>
 </footer>
