--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,29 +19,25 @@ import { siteLang, themeColor } from "~/data/config";
 		<meta name="googlebot" content="index,follow" />
 		<link rel="author" href="humans.txt" />
 
-		<!-- <link
+		<!-- Favicon -->
+		<link rel="icon" href="/favicon.ico" sizes="any" />
+		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/images/favicon/apple-touch-icon.png"
+			href="/apple-touch-icon.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="/images/favicon/favicon-32x32.png"
+			href="/favicon-32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="/images/favicon/favicon-16x16.png"
+			href="/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="/site.webmanifest" />
-		<link
-			rel="mask-icon"
-			href="/images/favicon/safari-pinned-tab.svg"
-			color="#E6F4FF"
-		/> -->
 		<meta name="msapplication-TileColor" content="#ffffff" />
 
 		<meta property="og:url" content={Astro.url} />
